--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body{
     height: 100%;
     background-image: url(fluro-black_LOGO.png);
     background-size: 10%;
-    background-color: blueviolet!important;
+    background-color: rgb(34, 39, 53)!important;
 }
 
 .section{
