--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body{
     height: 100%;
     background-image: url(fluro-black_LOGO.png);
     background-size: 10%;
-    background-color: rgb(34, 39, 53)!important;
+    background-color: #faf4ea!important;
 }
 
 .section{
@@ -33,7 +33,7 @@ html, body{
     width: 80%;
     background: white;
     text-transform: uppercase;
-    background-color: rgb(19, 23, 34);
+    background-color: rgb(250, 244, 234)!important;
 }
 
 .tradingview-widget-container{
