--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 html, body{
     height: 100%;
-    background-image: url(fluro-black_LOGO.png);
+    background-image: url(./img/fluro-black_LOGO.png);
     background-size: 5%;
     background-color: #faf4ea!important;
 }
