--- a/style.css
+++ b/style.css
@@ -55,3 +55,15 @@ html, body{
     font-size: 0.8;
     line-height: 0%;
 }
+
+/* stickers */
+.box{
+    position: relative;
+}
+  
+.box .lulino{
+    width: 7%;
+    position: absolute;
+    top: 7px;
+    right: 400px;
+}
