--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 html, body{
     height: 100%;
     background-image: url(./img/fluro-black_LOGO.png);
-    background-size: 5%;
+    background-size: 3%;
     background-color: #faf4ea!important;
 }
 
@@ -76,7 +76,8 @@ html, body{
 }
 
 .box .lulino-strong{
-    width: 7%;
+    width: 10%;
     position: absolute;
     left: 0px;
+    bottom: 700px;
 }
