--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ html, body{
     font-size: x-large;
 }
 
+.lulo:hover{
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='35' height='42' viewport='0 0 100 100' style='fill:black;font-size:30px;'><text y='50%'>💰</text></svg>") 16 0,auto;
+}
+
 /* stickers */
 .box{
     position: relative;
@@ -85,3 +89,4 @@ html, body{
     left: -10px;
     bottom: 700px;
 }
+
